syntax = "proto3";

package movie;

service MovieService {
  rpc ListMovies (ListMovieInput) returns (ListMovieResponse);
}

message ListMovieInput {
  string keyword = 1;
  int32 page = 2;
}

message ListMovieResponse {
  repeated Movie movies = 1;
}

message Movie {
  string Title = 1;
  string Year = 2;
  string imdbID = 3;
  string Type = 4;
  string Poster = 5;
}
